k8s/deployment-quiz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
        - name: quiz
          image: perdixcloud/quiz-divertido:707e237
          ports:
            - containerPort: 3000
