k8s/service-quiz.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  type: ClusterIP
  selector:
    app: quiz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
